--- a/achub/public/index.html
+++ b/achub/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/5/58/Animal_Crossing_Leaf.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Animal Crossing Hub</title>
   </head>
